// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t0] vision pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/8
   │  ├─ slug = has-questioned-fundamentals
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did we reason from first principles or from convention?
   │  │  
   │  │    for this vision, ask:
   │  │    - what are the fundamental truths here that we know are true?
   │  │    - do we build from those truths, or from "how it's usually done"?
   │  │    - if we started from scratch with only the fundamentals, what would we build?
   │  │    - what would this cost if we broke it down to raw materials/components?
   │  │  
   │  │    ensure we solve the right problem, not just the familiar one.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.1.vision._.r1.has-questioned-fundamentals.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1.vision --as promised --that has-questioned-fundamentals[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t1] vision pass attempted after promises and approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   └─ ✓ judge.1 - allowed [time]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.vision.md
   │  └─ judges
   │      └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t2] criteria pass attempted without promise then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = has-questioned-requirements
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  are any criteria unnecessary or misdirected?
   │  │  
   │  │    for each criterion, ask:
   │  │    - who said this was needed? when? why?
   │  │    - what if we removed this criterion — what would break?
   │  │    - is this criterion scope too large or too small?
   │  │    - could we test the same behavior more simply?
   │  │  
   │  │    challenge each criterion and justify why it belongs.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.2.1.criteria.blackbox._.r1.has-questioned-requirements.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that has-questioned-requirements[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t3] criteria pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   ├─ passage = allowed (artifacts only)
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t4] blueprint pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product.v1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/14
   │  ├─ slug = has-questioned-deletables
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  try hard to delete before you optimize:
   │  │  
   │  │    ## features
   │  │  
   │  │    for each feature in the blueprint, ask:
   │  │    - does this feature trace to a requirement in the criteria?
   │  │    - did the wisher explicitly ask for this feature?
   │  │    - or did we assume it was needed?
   │  │  
   │  │    if a feature has no traceability to vision or criteria:
   │  │    1. delete it
   │  │    2. or flag it as an open question for the wisher
   │  │  
   │  │    ## components
   │  │  
   │  │    for each component, ask:
   │  │    - can this be removed entirely?
   │  │    - if we deleted this and had to add it back, would we?
   │  │    - did we optimize a component that shouldn't exist?
   │  │    - what is the simplest version that works?
   │  │  
   │  │    delete and simplify before we proceed.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.3.3.1.blueprint.product.v1._.r1.has-questioned-deletables.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.3.1.blueprint.product.v1 --as promised --that has-questioned-deletables[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t5] blueprint pass attempted with promises but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [time]
   ├─ ✓ judge.1 - allowed [time]
   └─ ✗ judge.2 - blocked [time]

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product.v1
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.3.1.blueprint.product.v1.i1.md
      ├─ reviews
      │   └─ r1: bash -c ". .agent/repo=.this/role=any/skills/use.apikeys.sh && npx rhachet run --repo bhrain --skill review --rules '.agent/repo=ehmpathy/role=mechanic/briefs/practices/code.prod/pitofsuccess.errors/rule.*.md' --diffs since-main --paths-with '$route/3.3.blueprint.*.md' --join intersect --output '$route/.reviews/$stone.peer-review.failhides.md' --mode hard 2>&1"
      │       ├─ finished [time] ✓
      │       └─ review: .route/3.3.1.blueprint.product.v1.guard.review.i1.278bd7324cd6f6fe735a4872fa286a74f9c94d863c5e8ef489fa3b2219f85620.r1.md
      └─ judges
          ├─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
          │   └─ finished [time] ✓
          └─ j2: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [time] ✗
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m
[0m[31m🪶 judge 2
   ├─ stdout
   │  ├─
   │  │
   │  │  🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge
   │  │  
   │  │  passed: false
   │  │  reason: wait for human approval
   │  │  
   │  │  ✋ halted, human approval required
   │  │     ├─ please ask your human to
   │  │     │  └─ rhx route.stone.set --stone 3.3.1.blueprint.product.v1 --as approved
   │  │     │
   │  │     └─ after human approves, run
   │  │        └─ rhx route.stone.set --stone 3.3.1.blueprint.product.v1 --as passed
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  [0m[31m[0m
   │  │  [0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge[0m
   │  │  [0m[31m   └─ ✋ blocked by constraints[0m
   │  │  [0m[31m[0m
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t6] blueprint pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   ├─ ✓ judge.1 - allowed [time]
   └─ ✓ judge.2 - allowed [time]

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product.v1
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 3.3.1.blueprint.product.v1.i1.md
   │  ├─ reviews
   │  │   └─ r1: bash -c ". .agent/repo=.this/role=any/skills/use.apikeys.sh && npx rhachet run --repo bhrain --skill review --rules '.agent/repo=ehmpathy/role=mechanic/briefs/practices/code.prod/pitofsuccess.errors/rule.*.md' --diffs since-main --paths-with '$route/3.3.blueprint.*.md' --join intersect --output '$route/.reviews/$stone.peer-review.failhides.md' --mode hard 2>&1"
   │  │       └─ · cached
   │  └─ judges
   │      ├─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │      │   └─ finished [time] ✓
   │      └─ j2: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t7] execution pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/8
   │  ├─ slug = has-pruned-yagni
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for extras that were not prescribed.
   │  │  
   │  │    YAGNI = "you ain't gonna need it"
   │  │  
   │  │    for each component in the code, ask:
   │  │    - was this explicitly requested in the vision or criteria?
   │  │    - is this the minimum viable way to satisfy the requirement?
   │  │    - did we add abstraction "for future flexibility"?
   │  │    - did we add features "while we're here"?
   │  │    - did we optimize before we knew it was needed?
   │  │  
   │  │    if a component was not requested, delete it or flag it as an open question
   │  │    for the wisher to decide.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.5.1.execution.phase0_to_phaseN.v1._.r1.has-pruned-yagni.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN.v1 --as promised --that has-pruned-yagni[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t8] execution pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [time]
   └─ ✓ judge.1 - allowed [time]

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ index.ts
   │  ├─ reviews
   │  │   └─ r1: bash -c ". .agent/repo=.this/role=any/skills/use.apikeys.sh && npx rhachet run --repo bhrain --skill review --rules '.agent/repo=ehmpathy/role=mechanic/briefs/practices/code.prod/pitofsuccess.errors/rule.*.md' --diffs since-main --paths-with 'src/**/*.ts' --join intersect --output '$route/.reviews/$stone.peer-review.failhides.md' --mode hard 2>&1"
   │  │       ├─ finished [time] ✓
   │  │       └─ review: .route/5.1.execution.phase0_to_phaseN.v1.guard.review.i1.2548bf19ddcb3f0d1f63f1f7efaa903490509acc8ff14f2bc5a829d5b8c64c7f.r1.md
   │  └─ judges
   │      └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;
